@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.3.1 wip
 ---------------------------- 
+[enh #53] 'name' no more appended to source defined as url (vitalets) 
 [enh #46] move 'img' dir outside 'css' (vitalets) 
 [enh #48] fix handling of newlines in textarea input (jmfontaine) 
 [enh #47] set select source to function (brianchance) 
